# font-preview

./: .gitignore  CHANGELOG.md  README.md  po4a.cfg  pyproject.toml  pyproject.toml.bak
.github/workflows/: build-rpm.yml  release.yml  rpm-build.yml
.tx/: config
build-new/font-preview_0.2.1_all/DEBIAN/: control
build-new/font-preview_0.2.2_all/DEBIAN/: control
build-new/font-preview_0.2.2_all/usr/lib/python3/dist-packages/font_preview/: __init__.py  font_utils.py  main.py
build-new/font-preview_0.2.2_all/usr/share/applications/: se.danielnylander.FontPreview.desktop
data/: se.danielnylander.FontPreview.desktop  se.danielnylander.FontPreview.desktop.in
data/man/: font-preview.1
po/: README.md  font-preview.pot  sv.mo  sv.po
po/man/: font-preview.1.pot  sv.po
po/sv/LC_MESSAGES/: font-preview.mo
rpm-build/font-preview_0.2.1/usr/share/locale/sv/LC_MESSAGES/: font-preview.mo
src/font_preview/: __init__.py  main.py  window.py
