[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "font-preview"
version = "0.2.7"
description = "A better font viewer for Linux — preview, compare, and analyze Unicode coverage"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Nylander", email = "daniel@danielnylander.se" },
]
keywords = ["fonts", "gtk4", "fontconfig", "unicode", "preview"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: Gnome",
]
dependencies = [
    "PyGObject>=3.42",
    "fonttools>=4.0",
]

[project.scripts]
font-preview = "font_preview.main:main"

[project.urls]
Homepage = "https://github.com/yeager/font-preview"

[tool.setuptools.packages.find]
where = ["src"]
